# sequoia-decoder

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: API.md  CHANGELOG.md  DESIGN.md  TESTING.md
src/: codebook.csv  debug_formatter.rs  dna_utils.rs  lookup_table.rs  main.rs  optimized_processor.rs  shape_qc.rs  stats.rs
tests/: integration_tests.rs
tests/scripts/: test_all_anchor.py  test_compare.py  test_generator.py
