[package]
name = "sequoia-decoder"
version = "0.4.0"
edition = "2021"
authors = ["Centrillion Hangzhou Team"]
description = "A high-performance DNA sequence decoder for paired-end FASTQ data."

[dependencies]
flate2 = "1.0"
regex = "1.10"
clap = { version = "4.4", features = ["derive", "cargo"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
dashmap = "5.5"
num_cpus = "1.16"
bio = "3.0.0"
rustc-hash = "2.1.1"
image = { version = "0.24", default-features = false, features = ["png"] }
